[gd_scene load_steps=17 format=3 uid="uid://ljm6e27yrbda"]

[ext_resource type="Script" uid="uid://cfub0hxk00f3w" path="res://scenes/mods.gd" id="1_xq3f7"]
[ext_resource type="Texture2D" uid="uid://ddt6pnkjtn1fw" path="res://assets/textures/interfaces/dialog.png" id="2_4p6qy"]
[ext_resource type="ButtonGroup" uid="uid://clvfylyuwf1dp" path="res://resources/button_group/mod_scene/enable_mod_info_button_group.tres" id="2_826na"]
[ext_resource type="ButtonGroup" uid="uid://dycnclq3wpc47" path="res://resources/button_group/mod_scene/all_mod_info_button_group.tres" id="3_xq3f7"]
[ext_resource type="Script" uid="uid://uo3wmh6isoop" path="res://scripts/mod_scene/mod_scene_button.gd" id="4_lolbl"]
[ext_resource type="ButtonGroup" uid="uid://ds00lfjyfee7l" path="res://resources/button_group/mod_scene/tool_button_group.tres" id="5_8sjol"]
[ext_resource type="Theme" uid="uid://b3lrippcdysde" path="res://themes/button/main_menu_button.tres" id="6_xq3f7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k7dim"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qfsoo"]
atlas = ExtResource("2_4p6qy")
region = Rect2(512, 464, 209, 33)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_826na"]
bg_color = Color(0.19, 0.19, 0.19, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4p6qy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lolbl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_74eet"]
bg_color = Color(0.33, 0.3234, 0.3234, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lolbl"]
bg_color = Color(0.25, 0.25, 0.25, 1)

[sub_resource type="FontVariation" id="FontVariation_826na"]
spacing_glyph = 2
spacing_space = 2

[sub_resource type="LabelSettings" id="LabelSettings_mjkue"]
font_size = 20
shadow_size = 4
shadow_color = Color(0, 0, 0, 0.65098)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xq3f7")
enable_mod_info_button_group = ExtResource("2_826na")
all_mod_info_button_group = ExtResource("3_xq3f7")
tool_button_group = ExtResource("5_8sjol")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_k7dim")

[node name="MainMenu" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.95
anchor_bottom = 0.95
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_qfsoo")
patch_margin_left = 9
patch_margin_top = 9
patch_margin_right = 9
patch_margin_bottom = 9
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="MainMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 9
theme_override_constants/margin_top = 9
theme_override_constants/margin_right = 9
theme_override_constants/margin_bottom = 9

[node name="Background" type="Panel" parent="MainMenu/MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_826na")

[node name="ModViewer" type="Control" parent="MainMenu/MarginContainer/Background"]
layout_mode = 1
anchor_right = 1.0
anchor_bottom = 0.9

[node name="Control" type="Control" parent="MainMenu/MarginContainer/Background/ModViewer"]
layout_mode = 1
anchor_right = 0.6
anchor_bottom = 1.0
grow_vertical = 2

[node name="AllMods" type="PanelContainer" parent="MainMenu/MarginContainer/Background/ModViewer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.5
anchor_bottom = 1.0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_4p6qy")

[node name="MarginContainer" type="MarginContainer" parent="MainMenu/MarginContainer/Background/ModViewer/Control/AllMods"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4

[node name="PanelContainer" type="PanelContainer" parent="MainMenu/MarginContainer/Background/ModViewer/Control/AllMods/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/MarginContainer/Background/ModViewer/Control/AllMods/MarginContainer/PanelContainer"]
layout_mode = 2

[node name="EnableMods" type="PanelContainer" parent="MainMenu/MarginContainer/Background/ModViewer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_lolbl")

[node name="MarginContainer" type="MarginContainer" parent="MainMenu/MarginContainer/Background/ModViewer/Control/EnableMods"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4

[node name="PanelContainer" type="PanelContainer" parent="MainMenu/MarginContainer/Background/ModViewer/Control/EnableMods/MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MainMenu/MarginContainer/Background/ModViewer/Control/EnableMods/MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/MarginContainer/Background/ModViewer/Control/EnableMods/MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Control2" type="Control" parent="MainMenu/MarginContainer/Background/ModViewer"]
layout_mode = 1
anchor_left = 0.6
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="MainMenu/MarginContainer/Background/ModViewer/Control2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 0

[node name="ModDescription" type="PanelContainer" parent="MainMenu/MarginContainer/Background/ModViewer/Control2/MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_74eet")

[node name="MarginContainer" type="MarginContainer" parent="MainMenu/MarginContainer/Background/ModViewer/Control2/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Control" type="Control" parent="MainMenu/MarginContainer/Background/ModViewer/Control2/MarginContainer/MarginContainer"]
layout_mode = 2

[node name="Background" type="Panel" parent="MainMenu/MarginContainer/Background/ModViewer/Control2/MarginContainer/MarginContainer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_lolbl")

[node name="ModDescriptionLabel" type="RichTextLabel" parent="MainMenu/MarginContainer/Background/ModViewer/Control2/MarginContainer/MarginContainer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/shadow_outline_size = 5
theme_override_fonts/normal_font = SubResource("FontVariation_826na")
fit_content = true
scroll_active = false
threaded = true

[node name="ToolBar" type="Control" parent="MainMenu/MarginContainer/Background"]
layout_mode = 1
anchor_top = 0.9
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="MainMenu/MarginContainer/Background/ToolBar"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.75
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="MainMenu/MarginContainer/Background/ToolBar/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="SaveAndUse" type="Button" parent="MainMenu/MarginContainer/Background/ToolBar/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
theme = ExtResource("6_xq3f7")
theme_override_font_sizes/font_size = 30
toggle_mode = true
button_group = ExtResource("5_8sjol")
text = "                         "
script = ExtResource("4_lolbl")
description = "SaveAndUse"

[node name="Label" type="Label" parent="MainMenu/MarginContainer/Background/ToolBar/MarginContainer/HBoxContainer/SaveAndUse"]
modulate = Color(0.8, 0.8, 0.8, 1)
layout_mode = 1
offset_left = 40.5
offset_top = 10.0417
offset_right = 160.5
offset_bottom = 37.9583
pivot_offset = Vector2(60, 13.9583)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "SaveAndUse"
label_settings = SubResource("LabelSettings_mjkue")

[node name="MarginContainer2" type="MarginContainer" parent="MainMenu/MarginContainer/Background/ToolBar"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.75
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_right = 8

[node name="HBoxContainer" type="HBoxContainer" parent="MainMenu/MarginContainer/Background/ToolBar/MarginContainer2"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="ModAssetLib" type="Button" parent="MainMenu/MarginContainer/Background/ToolBar/MarginContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
theme = ExtResource("6_xq3f7")
theme_override_font_sizes/font_size = 30
toggle_mode = true
button_group = ExtResource("5_8sjol")
text = "                      "
script = ExtResource("4_lolbl")
kind = 1
description = "ModAssetLib"

[node name="Label" type="Label" parent="MainMenu/MarginContainer/Background/ToolBar/MarginContainer2/HBoxContainer/ModAssetLib"]
modulate = Color(0.8, 0.8, 0.8, 1)
layout_mode = 1
offset_left = 26.5
offset_top = 10.0417
offset_right = 151.5
offset_bottom = 37.9583
pivot_offset = Vector2(62.5, 13.9583)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "ModAssetLib"
label_settings = SubResource("LabelSettings_mjkue")

[node name="DisableMod2" type="Button" parent="MainMenu/MarginContainer/Background/ToolBar/MarginContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
theme = ExtResource("6_xq3f7")
theme_override_font_sizes/font_size = 30
toggle_mode = true
button_group = ExtResource("5_8sjol")
text = "                      "
script = ExtResource("4_lolbl")
kind = 3
description = "EnableMod"

[node name="Label" type="Label" parent="MainMenu/MarginContainer/Background/ToolBar/MarginContainer2/HBoxContainer/DisableMod2"]
modulate = Color(0.8, 0.8, 0.8, 1)
layout_mode = 1
offset_left = 34.5
offset_top = 10.0417
offset_right = 143.5
offset_bottom = 37.9583
pivot_offset = Vector2(54.5, 13.9583)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "EnableMod"
label_settings = SubResource("LabelSettings_mjkue")

[node name="DisableMod" type="Button" parent="MainMenu/MarginContainer/Background/ToolBar/MarginContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
theme = ExtResource("6_xq3f7")
theme_override_font_sizes/font_size = 30
toggle_mode = true
button_group = ExtResource("5_8sjol")
text = "                      "
script = ExtResource("4_lolbl")
kind = 2
description = "DisableMod"

[node name="Label" type="Label" parent="MainMenu/MarginContainer/Background/ToolBar/MarginContainer2/HBoxContainer/DisableMod"]
modulate = Color(0.8, 0.8, 0.8, 1)
layout_mode = 1
offset_left = 31.5
offset_top = 10.0417
offset_right = 146.5
offset_bottom = 37.9583
pivot_offset = Vector2(57.5, 13.9583)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "DisableMod"
label_settings = SubResource("LabelSettings_mjkue")

[node name="SaveModSet" type="Button" parent="MainMenu/MarginContainer/Background/ToolBar/MarginContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
theme = ExtResource("6_xq3f7")
theme_override_font_sizes/font_size = 30
toggle_mode = true
button_group = ExtResource("5_8sjol")
text = "                      "
script = ExtResource("4_lolbl")
kind = 3
description = "EnableMod"

[node name="Label" type="Label" parent="MainMenu/MarginContainer/Background/ToolBar/MarginContainer2/HBoxContainer/SaveModSet"]
modulate = Color(0.8, 0.8, 0.8, 1)
layout_mode = 1
offset_left = 34.5
offset_top = 10.0417
offset_right = 143.5
offset_bottom = 37.9583
pivot_offset = Vector2(54.5, 13.9583)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "EnableMod"
label_settings = SubResource("LabelSettings_mjkue")

[node name="ChangeModSet" type="Button" parent="MainMenu/MarginContainer/Background/ToolBar/MarginContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
theme = ExtResource("6_xq3f7")
theme_override_font_sizes/font_size = 30
toggle_mode = true
button_group = ExtResource("5_8sjol")
text = "                      "
script = ExtResource("4_lolbl")
kind = 5
description = "ChangeModSet"

[node name="Label" type="Label" parent="MainMenu/MarginContainer/Background/ToolBar/MarginContainer2/HBoxContainer/ChangeModSet"]
modulate = Color(0.8, 0.8, 0.8, 1)
layout_mode = 1
offset_left = 16.0
offset_top = 10.0417
offset_right = 162.0
offset_bottom = 37.9583
pivot_offset = Vector2(73, 13.9583)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "ChangeModSet"
label_settings = SubResource("LabelSettings_mjkue")

[node name="MenuButton" type="MenuButton" parent="MainMenu/MarginContainer/Background/ToolBar/MarginContainer2/HBoxContainer/ChangeModSet"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
pivot_offset = Vector2(0, 47.6)

[node name="Timer" type="Timer" parent="."]

[connection signal="ready" from="MainMenu/MarginContainer/Background/ToolBar/MarginContainer/HBoxContainer/SaveAndUse" to="MainMenu/MarginContainer/Background/ToolBar/MarginContainer/HBoxContainer/SaveAndUse" method="_on_ready"]
[connection signal="ready" from="MainMenu/MarginContainer/Background/ToolBar/MarginContainer2/HBoxContainer/ModAssetLib" to="MainMenu/MarginContainer/Background/ToolBar/MarginContainer2/HBoxContainer/ModAssetLib" method="_on_ready"]
[connection signal="ready" from="MainMenu/MarginContainer/Background/ToolBar/MarginContainer2/HBoxContainer/DisableMod2" to="MainMenu/MarginContainer/Background/ToolBar/MarginContainer2/HBoxContainer/DisableMod2" method="_on_ready"]
[connection signal="ready" from="MainMenu/MarginContainer/Background/ToolBar/MarginContainer2/HBoxContainer/DisableMod" to="MainMenu/MarginContainer/Background/ToolBar/MarginContainer2/HBoxContainer/DisableMod" method="_on_ready"]
[connection signal="ready" from="MainMenu/MarginContainer/Background/ToolBar/MarginContainer2/HBoxContainer/SaveModSet" to="MainMenu/MarginContainer/Background/ToolBar/MarginContainer2/HBoxContainer/SaveModSet" method="_on_ready"]
[connection signal="ready" from="MainMenu/MarginContainer/Background/ToolBar/MarginContainer2/HBoxContainer/ChangeModSet" to="MainMenu/MarginContainer/Background/ToolBar/MarginContainer2/HBoxContainer/ChangeModSet" method="_on_ready"]
